tests/init-global/pos/list-colon-colon-next.scala
object A:
  val a: List[Int] = List(1, 2, 3)

object B:
  val b = A.a.size
